// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rendered layer (golden) shared platform default 1`] = `
"# syntax=docker/dockerfile:1.7
# Kortix platform default sandbox base.
# Sessions clone the project workspace at boot — nothing project-specific
# is baked in here. Customize via \`sandbox.templates\` in kortix.yaml.
FROM ubuntu:24.04

WORKDIR /workspace

# ─── Kortix runtime layer (auto-injected) ──────────────────────────
# Everything below is added by the Kortix snapshot builder. Do not
# edit by hand — your project Dockerfile above is preserved verbatim.

USER root
ENV DEBIAN_FRONTEND=noninteractive
RUN apt-get update \\
    && apt-get install -y --no-install-recommends \\
        ca-certificates curl git gzip libatomic1 sudo unzip tmux iproute2 iputils-arping \\
        build-essential ffmpeg fonts-dejavu fonts-liberation fonts-noto fonts-noto-cjk \\
        latexmk libreoffice pandoc pkg-config poppler-utils qpdf tesseract-ocr \\
        texlive-bibtex-extra texlive-fonts-recommended texlive-latex-base \\
        texlive-latex-extra texlive-latex-recommended \\
    && rm -rf /var/lib/apt/lists/*

RUN useradd --create-home --shell /bin/bash --user-group kortix \\
    && printf 'kortix ALL=(ALL) NOPASSWD:ALL\\n' > /etc/sudoers.d/kortix \\
    && chmod 0440 /etc/sudoers.d/kortix \\
    && mkdir -p /workspace /opt/kortix /opt/pw-browsers /ephemeral/kortix-master/opencode \\
        /home/kortix/.local/bin /home/kortix/.local/share/pnpm/bin /home/kortix/.bun/bin \\
    && chown -R kortix:kortix /workspace /opt/kortix /opt/pw-browsers /ephemeral /home/kortix
ENV PNPM_HOME=/home/kortix/.local/share/pnpm \\
    PATH=/home/kortix/.local/bin:/home/kortix/.local/share/pnpm/bin:/home/kortix/.bun/bin:$PATH
USER kortix

RUN case "$(uname -m)" in \\
      x86_64) uv_arch=x86_64; uv_sha=04bc7d180d6138bf6dc08387acf507a823f397a98fea55da36b0ccc7fbce3b68 ;; \\
      aarch64|arm64) uv_arch=aarch64; uv_sha=8c11d90f5f66d232930cf8ae3a085c39877690d409e10878234802b028b20e2a ;; \\
      *) echo "unsupported uv architecture: $(uname -m)" >&2; exit 1 ;; \\
    esac \\
    && curl -fsSL --retry 3 --retry-delay 2 -o /tmp/uv.tar.gz \\
         "https://github.com/astral-sh/uv/releases/download/0.11.30/uv-\${uv_arch}-unknown-linux-gnu.tar.gz" \\
    && echo "\${uv_sha}  /tmp/uv.tar.gz" | sha256sum -c - \\
    && tar -xzf /tmp/uv.tar.gz --strip-components=1 -C /home/kortix/.local/bin \\
    && rm /tmp/uv.tar.gz \\
    && uv --version | grep -Eq '^uv 0.11.30( |$)' \\
    && UV_PYTHON_DOWNLOADS=automatic uv python install --default 3.12.13 \\
    && python -c 'import sys; assert sys.version_info[:3] == (3, 12, 13); print("managed python:", sys.version)' \\
    && python3 -c 'import sys; assert sys.version_info[:3] == (3, 12, 13)'

ENV SHELL=/bin/bash
RUN case "$(uname -m)" in \\
      x86_64) pnpm_arch=x64; pnpm_sha=0c1373b6390f6b89ff8b896d3647c9826577ddc49173a2f732da69b36569f9e0 ;; \\
      aarch64|arm64) pnpm_arch=arm64; pnpm_sha=361e385867146972d0635a41a1871cb44c9c23f65acce78a5f1ca1d44ac0afcd ;; \\
      *) echo "unsupported pnpm architecture: $(uname -m)" >&2; exit 1 ;; \\
    esac \\
    && curl -fsSL --retry 3 --retry-delay 2 -o /tmp/pnpm.tar.gz \\
         "https://github.com/pnpm/pnpm/releases/download/v11.15.1/pnpm-linux-\${pnpm_arch}.tar.gz" \\
    && echo "\${pnpm_sha}  /tmp/pnpm.tar.gz" | sha256sum -c - \\
    && tar -xzf /tmp/pnpm.tar.gz -C /home/kortix/.local/bin \\
    && rm /tmp/pnpm.tar.gz \\
    && test "$(pnpm --version)" = "11.15.1" \\
    && pnpm runtime set node 22.23.1 -g \\
    && test "$(node --version)" = "v22.23.1" \\
    && pnpm add -g "npm@12.0.1" \\
    && test "$(npm --version)" = "12.0.1"

ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers \\
    AGENT_BROWSER_EXECUTABLE_PATH=/home/kortix/.local/bin/chromium \\
    AGENT_BROWSER_ARGS=--no-sandbox,--disable-dev-shm-usage \\
    PLAYWRIGHT_DOWNLOAD_CONNECTION_TIMEOUT=1800000
RUN pnpm add -g --allow-build=agent-browser "agent-browser@0.27.0" \\
    && agent-browser --version \\
    && for pw_try in 1 2 3 4 5; do \\
        pnpm dlx playwright@1.60.0 install --with-deps chromium && break; \\
        echo "playwright chromium install attempt $pw_try failed, retrying..."; \\
        sleep $((pw_try*10)); \\
    done \\
    && sudo rm -rf /var/lib/apt/lists/* \\
    && pw_chrome="$(find /opt/pw-browsers -type f -path '*chrome-linux*/chrome' | head -n1)" \\
    && test -n "$pw_chrome" \\
    && ln -sf "$pw_chrome" /home/kortix/.local/bin/chromium \\
    && mkdir -p /home/kortix/.agent-browser/browsers \\
    && ln -sf "$(dirname "$pw_chrome")" /home/kortix/.agent-browser/browsers/chrome-linux64 \\
    && chromium --version \\
    && env -u AGENT_BROWSER_EXECUTABLE_PATH agent-browser doctor 2>&1 | grep -qE 'pass.+chrome-linux64/chrome'

RUN pnpm add -g --allow-build=opencode-ai "opencode-ai@1.17.11" \\
    && command -v opencode \\
    && opencode --version

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup migration; rm -f /tmp/kortix-opencode-warmup

RUN case "$(uname -m)" in \\
      x86_64) bun_arch=x64; bun_sha=951ee2aee855f08595aeec6225226a298d3fea83a3dcd6465c09cbccdf7e848f ;; \\
      aarch64|arm64) bun_arch=aarch64; bun_sha=a27ffb63a8310375836e0d6f668ae17fa8d8d18b88c37c821c65331973a19a3b ;; \\
      *) echo "unsupported Bun architecture: $(uname -m)" >&2; exit 1 ;; \\
    esac \\
    && curl -fsSL --retry 3 --retry-delay 2 -o /tmp/bun.zip \\
         "https://github.com/oven-sh/bun/releases/download/bun-v1.3.14/bun-linux-\${bun_arch}.zip" \\
    && echo "\${bun_sha}  /tmp/bun.zip" | sha256sum -c - \\
    && unzip -q /tmp/bun.zip -d /tmp/bun \\
    && install -m 0755 "/tmp/bun/bun-linux-\${bun_arch}/bun" /home/kortix/.bun/bin/bun \\
    && ln -sf bun /home/kortix/.bun/bin/bunx \\
    && rm -rf /tmp/bun /tmp/bun.zip \\
    && test "$(bun --version)" = "1.3.14"

RUN mkdir -p /opt/kortix/opencode-config-deps \\
    && cd /opt/kortix/opencode-config-deps \\
    && printf '{"name":"kortix-opencode-config","private":true,"dependencies":{"@mendable/firecrawl-js":"^4.25.1","@opencode-ai/plugin":"1.17.11","@tavily/core":"^0.7.3","replicate":"^1.4.0"},"overrides":{"axios":"1.16.0","form-data":"4.0.6"}}' > package.json \\
    && bun install

RUN cd /opt/kortix/opencode-config-deps \\
    && bun build node_modules/axios/lib/utils.js node_modules/form-data/lib/form_data.js --target=bun --outdir=/tmp/opencode-deps-bundle-check \\
    && rm -rf /tmp/opencode-deps-bundle-check \\
    && echo "opencode-config-deps: baked tree bundles cleanly"

COPY --chown=kortix:kortix kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup instance wipe; rm -f /tmp/kortix-opencode-warmup

USER root
COPY kortix-agent.gz /tmp/kortix-agent.gz
COPY kortix.gz /tmp/kortix.gz
COPY kortix-entrypoint /usr/local/bin/kortix-entrypoint
COPY MACHINE.md /MACHINE.md
COPY kortix-slack-cli/ /opt/kortix/apps/sandbox/slack-cli/
COPY kortix-executor-sdk/ /opt/kortix/packages/executor-sdk/
COPY kortix-llm-catalog.json /opt/kortix/llm-catalog.json
COPY scaffold.git /opt/kortix/scaffold.git
RUN gunzip -c /tmp/kortix-agent.gz > /usr/local/bin/kortix-agent \\
    && gunzip -c /tmp/kortix.gz > /usr/local/bin/kortix \\
    && rm /tmp/kortix-agent.gz /tmp/kortix.gz \\
    && bash -n /usr/local/bin/kortix-entrypoint \\
    && chmod +x /usr/local/bin/kortix-agent /usr/local/bin/kortix /usr/local/bin/kortix-entrypoint \\
        /opt/kortix/apps/sandbox/slack-cli/install-shims.sh \\
    && bash /opt/kortix/apps/sandbox/slack-cli/install-shims.sh /opt/kortix/apps/sandbox/slack-cli \\
    && kortix --version \\
    && chown -R kortix:kortix /opt/kortix /workspace /ephemeral

ENV KORTIX_WORKSPACE=/workspace
USER kortix
WORKDIR /workspace
EXPOSE 8000
ENTRYPOINT ["/usr/local/bin/kortix-entrypoint"]
"
`;

exports[`rendered layer (golden) custom template (user seeds /workspace) 1`] = `
"FROM ubuntu:24.04

RUN apt-get update && apt-get install -y --no-install-recommends gdal-bin

WORKDIR /workspace
RUN mkdir -p /workspace/data && echo seed > /workspace/data/basemap.tif

# ─── Kortix runtime layer (auto-injected) ──────────────────────────
# Everything below is added by the Kortix snapshot builder. Do not
# edit by hand — your project Dockerfile above is preserved verbatim.

USER root
ENV DEBIAN_FRONTEND=noninteractive
RUN apt-get update \\
    && apt-get install -y --no-install-recommends \\
        ca-certificates curl git gzip libatomic1 sudo unzip tmux iproute2 iputils-arping \\
        build-essential ffmpeg fonts-dejavu fonts-liberation fonts-noto fonts-noto-cjk \\
        latexmk libreoffice pandoc pkg-config poppler-utils qpdf tesseract-ocr \\
        texlive-bibtex-extra texlive-fonts-recommended texlive-latex-base \\
        texlive-latex-extra texlive-latex-recommended \\
    && rm -rf /var/lib/apt/lists/*

RUN useradd --create-home --shell /bin/bash --user-group kortix \\
    && printf 'kortix ALL=(ALL) NOPASSWD:ALL\\n' > /etc/sudoers.d/kortix \\
    && chmod 0440 /etc/sudoers.d/kortix \\
    && mkdir -p /workspace /opt/kortix /opt/pw-browsers /ephemeral/kortix-master/opencode \\
        /home/kortix/.local/bin /home/kortix/.local/share/pnpm/bin /home/kortix/.bun/bin \\
    && chown -R kortix:kortix /workspace /opt/kortix /opt/pw-browsers /ephemeral /home/kortix
ENV PNPM_HOME=/home/kortix/.local/share/pnpm \\
    PATH=/home/kortix/.local/bin:/home/kortix/.local/share/pnpm/bin:/home/kortix/.bun/bin:$PATH
USER kortix

RUN case "$(uname -m)" in \\
      x86_64) uv_arch=x86_64; uv_sha=04bc7d180d6138bf6dc08387acf507a823f397a98fea55da36b0ccc7fbce3b68 ;; \\
      aarch64|arm64) uv_arch=aarch64; uv_sha=8c11d90f5f66d232930cf8ae3a085c39877690d409e10878234802b028b20e2a ;; \\
      *) echo "unsupported uv architecture: $(uname -m)" >&2; exit 1 ;; \\
    esac \\
    && curl -fsSL --retry 3 --retry-delay 2 -o /tmp/uv.tar.gz \\
         "https://github.com/astral-sh/uv/releases/download/0.11.30/uv-\${uv_arch}-unknown-linux-gnu.tar.gz" \\
    && echo "\${uv_sha}  /tmp/uv.tar.gz" | sha256sum -c - \\
    && tar -xzf /tmp/uv.tar.gz --strip-components=1 -C /home/kortix/.local/bin \\
    && rm /tmp/uv.tar.gz \\
    && uv --version | grep -Eq '^uv 0.11.30( |$)' \\
    && UV_PYTHON_DOWNLOADS=automatic uv python install --default 3.12.13 \\
    && python -c 'import sys; assert sys.version_info[:3] == (3, 12, 13); print("managed python:", sys.version)' \\
    && python3 -c 'import sys; assert sys.version_info[:3] == (3, 12, 13)'

ENV SHELL=/bin/bash
RUN case "$(uname -m)" in \\
      x86_64) pnpm_arch=x64; pnpm_sha=0c1373b6390f6b89ff8b896d3647c9826577ddc49173a2f732da69b36569f9e0 ;; \\
      aarch64|arm64) pnpm_arch=arm64; pnpm_sha=361e385867146972d0635a41a1871cb44c9c23f65acce78a5f1ca1d44ac0afcd ;; \\
      *) echo "unsupported pnpm architecture: $(uname -m)" >&2; exit 1 ;; \\
    esac \\
    && curl -fsSL --retry 3 --retry-delay 2 -o /tmp/pnpm.tar.gz \\
         "https://github.com/pnpm/pnpm/releases/download/v11.15.1/pnpm-linux-\${pnpm_arch}.tar.gz" \\
    && echo "\${pnpm_sha}  /tmp/pnpm.tar.gz" | sha256sum -c - \\
    && tar -xzf /tmp/pnpm.tar.gz -C /home/kortix/.local/bin \\
    && rm /tmp/pnpm.tar.gz \\
    && test "$(pnpm --version)" = "11.15.1" \\
    && pnpm runtime set node 22.23.1 -g \\
    && test "$(node --version)" = "v22.23.1" \\
    && pnpm add -g "npm@12.0.1" \\
    && test "$(npm --version)" = "12.0.1"

ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers \\
    AGENT_BROWSER_EXECUTABLE_PATH=/home/kortix/.local/bin/chromium \\
    AGENT_BROWSER_ARGS=--no-sandbox,--disable-dev-shm-usage \\
    PLAYWRIGHT_DOWNLOAD_CONNECTION_TIMEOUT=1800000
RUN pnpm add -g --allow-build=agent-browser "agent-browser@0.27.0" \\
    && agent-browser --version \\
    && for pw_try in 1 2 3 4 5; do \\
        pnpm dlx playwright@1.60.0 install --with-deps chromium && break; \\
        echo "playwright chromium install attempt $pw_try failed, retrying..."; \\
        sleep $((pw_try*10)); \\
    done \\
    && sudo rm -rf /var/lib/apt/lists/* \\
    && pw_chrome="$(find /opt/pw-browsers -type f -path '*chrome-linux*/chrome' | head -n1)" \\
    && test -n "$pw_chrome" \\
    && ln -sf "$pw_chrome" /home/kortix/.local/bin/chromium \\
    && mkdir -p /home/kortix/.agent-browser/browsers \\
    && ln -sf "$(dirname "$pw_chrome")" /home/kortix/.agent-browser/browsers/chrome-linux64 \\
    && chromium --version \\
    && env -u AGENT_BROWSER_EXECUTABLE_PATH agent-browser doctor 2>&1 | grep -qE 'pass.+chrome-linux64/chrome'

RUN pnpm add -g --allow-build=opencode-ai "opencode-ai@1.17.11" \\
    && command -v opencode \\
    && opencode --version

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup migration; rm -f /tmp/kortix-opencode-warmup

RUN case "$(uname -m)" in \\
      x86_64) bun_arch=x64; bun_sha=951ee2aee855f08595aeec6225226a298d3fea83a3dcd6465c09cbccdf7e848f ;; \\
      aarch64|arm64) bun_arch=aarch64; bun_sha=a27ffb63a8310375836e0d6f668ae17fa8d8d18b88c37c821c65331973a19a3b ;; \\
      *) echo "unsupported Bun architecture: $(uname -m)" >&2; exit 1 ;; \\
    esac \\
    && curl -fsSL --retry 3 --retry-delay 2 -o /tmp/bun.zip \\
         "https://github.com/oven-sh/bun/releases/download/bun-v1.3.14/bun-linux-\${bun_arch}.zip" \\
    && echo "\${bun_sha}  /tmp/bun.zip" | sha256sum -c - \\
    && unzip -q /tmp/bun.zip -d /tmp/bun \\
    && install -m 0755 "/tmp/bun/bun-linux-\${bun_arch}/bun" /home/kortix/.bun/bin/bun \\
    && ln -sf bun /home/kortix/.bun/bin/bunx \\
    && rm -rf /tmp/bun /tmp/bun.zip \\
    && test "$(bun --version)" = "1.3.14"

RUN mkdir -p /opt/kortix/opencode-config-deps \\
    && cd /opt/kortix/opencode-config-deps \\
    && printf '{"name":"kortix-opencode-config","private":true,"dependencies":{"@mendable/firecrawl-js":"^4.25.1","@opencode-ai/plugin":"1.17.11","@tavily/core":"^0.7.3","replicate":"^1.4.0"},"overrides":{"axios":"1.16.0","form-data":"4.0.6"}}' > package.json \\
    && bun install

RUN cd /opt/kortix/opencode-config-deps \\
    && bun build node_modules/axios/lib/utils.js node_modules/form-data/lib/form_data.js --target=bun --outdir=/tmp/opencode-deps-bundle-check \\
    && rm -rf /tmp/opencode-deps-bundle-check \\
    && echo "opencode-config-deps: baked tree bundles cleanly"

COPY --chown=kortix:kortix kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup instance targeted; rm -f /tmp/kortix-opencode-warmup

USER root
COPY kortix-agent.gz /tmp/kortix-agent.gz
COPY kortix.gz /tmp/kortix.gz
COPY kortix-entrypoint /usr/local/bin/kortix-entrypoint
COPY MACHINE.md /MACHINE.md
COPY kortix-slack-cli/ /opt/kortix/apps/sandbox/slack-cli/
COPY kortix-executor-sdk/ /opt/kortix/packages/executor-sdk/
COPY kortix-llm-catalog.json /opt/kortix/llm-catalog.json
COPY scaffold.git /opt/kortix/scaffold.git
RUN gunzip -c /tmp/kortix-agent.gz > /usr/local/bin/kortix-agent \\
    && gunzip -c /tmp/kortix.gz > /usr/local/bin/kortix \\
    && rm /tmp/kortix-agent.gz /tmp/kortix.gz \\
    && bash -n /usr/local/bin/kortix-entrypoint \\
    && chmod +x /usr/local/bin/kortix-agent /usr/local/bin/kortix /usr/local/bin/kortix-entrypoint \\
        /opt/kortix/apps/sandbox/slack-cli/install-shims.sh \\
    && bash /opt/kortix/apps/sandbox/slack-cli/install-shims.sh /opt/kortix/apps/sandbox/slack-cli \\
    && kortix --version \\
    && chown -R kortix:kortix /opt/kortix /workspace /ephemeral

ENV KORTIX_WORKSPACE=/workspace
USER kortix
WORKDIR /workspace
EXPOSE 8000
ENTRYPOINT ["/usr/local/bin/kortix-entrypoint"]
"
`;

exports[`rendered layer (golden) per-project cold warm (warmRepo) 1`] = `
"# syntax=docker/dockerfile:1.7
# Kortix platform default sandbox base.
# Sessions clone the project workspace at boot — nothing project-specific
# is baked in here. Customize via \`sandbox.templates\` in kortix.yaml.
FROM ubuntu:24.04

WORKDIR /workspace

# ─── Kortix runtime layer (auto-injected) ──────────────────────────
# Everything below is added by the Kortix snapshot builder. Do not
# edit by hand — your project Dockerfile above is preserved verbatim.

USER root
ENV DEBIAN_FRONTEND=noninteractive
RUN apt-get update \\
    && apt-get install -y --no-install-recommends \\
        ca-certificates curl git gzip libatomic1 sudo unzip tmux iproute2 iputils-arping \\
        build-essential ffmpeg fonts-dejavu fonts-liberation fonts-noto fonts-noto-cjk \\
        latexmk libreoffice pandoc pkg-config poppler-utils qpdf tesseract-ocr \\
        texlive-bibtex-extra texlive-fonts-recommended texlive-latex-base \\
        texlive-latex-extra texlive-latex-recommended \\
    && rm -rf /var/lib/apt/lists/*

RUN useradd --create-home --shell /bin/bash --user-group kortix \\
    && printf 'kortix ALL=(ALL) NOPASSWD:ALL\\n' > /etc/sudoers.d/kortix \\
    && chmod 0440 /etc/sudoers.d/kortix \\
    && mkdir -p /workspace /opt/kortix /opt/pw-browsers /ephemeral/kortix-master/opencode \\
        /home/kortix/.local/bin /home/kortix/.local/share/pnpm/bin /home/kortix/.bun/bin \\
    && chown -R kortix:kortix /workspace /opt/kortix /opt/pw-browsers /ephemeral /home/kortix
ENV PNPM_HOME=/home/kortix/.local/share/pnpm \\
    PATH=/home/kortix/.local/bin:/home/kortix/.local/share/pnpm/bin:/home/kortix/.bun/bin:$PATH
USER kortix

RUN case "$(uname -m)" in \\
      x86_64) uv_arch=x86_64; uv_sha=04bc7d180d6138bf6dc08387acf507a823f397a98fea55da36b0ccc7fbce3b68 ;; \\
      aarch64|arm64) uv_arch=aarch64; uv_sha=8c11d90f5f66d232930cf8ae3a085c39877690d409e10878234802b028b20e2a ;; \\
      *) echo "unsupported uv architecture: $(uname -m)" >&2; exit 1 ;; \\
    esac \\
    && curl -fsSL --retry 3 --retry-delay 2 -o /tmp/uv.tar.gz \\
         "https://github.com/astral-sh/uv/releases/download/0.11.30/uv-\${uv_arch}-unknown-linux-gnu.tar.gz" \\
    && echo "\${uv_sha}  /tmp/uv.tar.gz" | sha256sum -c - \\
    && tar -xzf /tmp/uv.tar.gz --strip-components=1 -C /home/kortix/.local/bin \\
    && rm /tmp/uv.tar.gz \\
    && uv --version | grep -Eq '^uv 0.11.30( |$)' \\
    && UV_PYTHON_DOWNLOADS=automatic uv python install --default 3.12.13 \\
    && python -c 'import sys; assert sys.version_info[:3] == (3, 12, 13); print("managed python:", sys.version)' \\
    && python3 -c 'import sys; assert sys.version_info[:3] == (3, 12, 13)'

ENV SHELL=/bin/bash
RUN case "$(uname -m)" in \\
      x86_64) pnpm_arch=x64; pnpm_sha=0c1373b6390f6b89ff8b896d3647c9826577ddc49173a2f732da69b36569f9e0 ;; \\
      aarch64|arm64) pnpm_arch=arm64; pnpm_sha=361e385867146972d0635a41a1871cb44c9c23f65acce78a5f1ca1d44ac0afcd ;; \\
      *) echo "unsupported pnpm architecture: $(uname -m)" >&2; exit 1 ;; \\
    esac \\
    && curl -fsSL --retry 3 --retry-delay 2 -o /tmp/pnpm.tar.gz \\
         "https://github.com/pnpm/pnpm/releases/download/v11.15.1/pnpm-linux-\${pnpm_arch}.tar.gz" \\
    && echo "\${pnpm_sha}  /tmp/pnpm.tar.gz" | sha256sum -c - \\
    && tar -xzf /tmp/pnpm.tar.gz -C /home/kortix/.local/bin \\
    && rm /tmp/pnpm.tar.gz \\
    && test "$(pnpm --version)" = "11.15.1" \\
    && pnpm runtime set node 22.23.1 -g \\
    && test "$(node --version)" = "v22.23.1" \\
    && pnpm add -g "npm@12.0.1" \\
    && test "$(npm --version)" = "12.0.1"

ENV PLAYWRIGHT_BROWSERS_PATH=/opt/pw-browsers \\
    AGENT_BROWSER_EXECUTABLE_PATH=/home/kortix/.local/bin/chromium \\
    AGENT_BROWSER_ARGS=--no-sandbox,--disable-dev-shm-usage \\
    PLAYWRIGHT_DOWNLOAD_CONNECTION_TIMEOUT=1800000
RUN pnpm add -g --allow-build=agent-browser "agent-browser@0.27.0" \\
    && agent-browser --version \\
    && for pw_try in 1 2 3 4 5; do \\
        pnpm dlx playwright@1.60.0 install --with-deps chromium && break; \\
        echo "playwright chromium install attempt $pw_try failed, retrying..."; \\
        sleep $((pw_try*10)); \\
    done \\
    && sudo rm -rf /var/lib/apt/lists/* \\
    && pw_chrome="$(find /opt/pw-browsers -type f -path '*chrome-linux*/chrome' | head -n1)" \\
    && test -n "$pw_chrome" \\
    && ln -sf "$pw_chrome" /home/kortix/.local/bin/chromium \\
    && mkdir -p /home/kortix/.agent-browser/browsers \\
    && ln -sf "$(dirname "$pw_chrome")" /home/kortix/.agent-browser/browsers/chrome-linux64 \\
    && chromium --version \\
    && env -u AGENT_BROWSER_EXECUTABLE_PATH agent-browser doctor 2>&1 | grep -qE 'pass.+chrome-linux64/chrome'

RUN pnpm add -g --allow-build=opencode-ai "opencode-ai@1.17.11" \\
    && command -v opencode \\
    && opencode --version

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup migration; rm -f /tmp/kortix-opencode-warmup

RUN case "$(uname -m)" in \\
      x86_64) bun_arch=x64; bun_sha=951ee2aee855f08595aeec6225226a298d3fea83a3dcd6465c09cbccdf7e848f ;; \\
      aarch64|arm64) bun_arch=aarch64; bun_sha=a27ffb63a8310375836e0d6f668ae17fa8d8d18b88c37c821c65331973a19a3b ;; \\
      *) echo "unsupported Bun architecture: $(uname -m)" >&2; exit 1 ;; \\
    esac \\
    && curl -fsSL --retry 3 --retry-delay 2 -o /tmp/bun.zip \\
         "https://github.com/oven-sh/bun/releases/download/bun-v1.3.14/bun-linux-\${bun_arch}.zip" \\
    && echo "\${bun_sha}  /tmp/bun.zip" | sha256sum -c - \\
    && unzip -q /tmp/bun.zip -d /tmp/bun \\
    && install -m 0755 "/tmp/bun/bun-linux-\${bun_arch}/bun" /home/kortix/.bun/bin/bun \\
    && ln -sf bun /home/kortix/.bun/bin/bunx \\
    && rm -rf /tmp/bun /tmp/bun.zip \\
    && test "$(bun --version)" = "1.3.14"

RUN mkdir -p /opt/kortix/opencode-config-deps \\
    && cd /opt/kortix/opencode-config-deps \\
    && printf '{"name":"kortix-opencode-config","private":true,"dependencies":{"@mendable/firecrawl-js":"^4.25.1","@opencode-ai/plugin":"1.17.11","@tavily/core":"^0.7.3","replicate":"^1.4.0"},"overrides":{"axios":"1.16.0","form-data":"4.0.6"}}' > package.json \\
    && bun install

RUN cd /opt/kortix/opencode-config-deps \\
    && bun build node_modules/axios/lib/utils.js node_modules/form-data/lib/form_data.js --target=bun --outdir=/tmp/opencode-deps-bundle-check \\
    && rm -rf /tmp/opencode-deps-bundle-check \\
    && echo "opencode-config-deps: baked tree bundles cleanly"


# ─── Per-project COLD warm: bake repo checkout into /workspace ──────
# The repo was cloned with the git-host credential, origin-reset to the
# Kortix proxy, and scrubbed of ALL auth material API-side in Suna before
# this Dockerfile was rendered. This image only COPYs the sanitized plain
# bytes — no git credential ever enters the Dockerfile, build args, image
# history, or build logs. See PHASE 1 provider-migration hardening.
RUN cd / && mkdir -p /workspace && find /workspace -mindepth 1 -maxdepth 1 -exec rm -rf {} +
COPY --chown=kortix:kortix kortix-warm-repo/ /workspace/
COPY kortix-warm-repo-git.tar /tmp/kortix-warm-repo-git.tar
RUN rm -rf /workspace/.git && mkdir -p /workspace/.git && tar -xf /tmp/kortix-warm-repo-git.tar -C /workspace/.git --strip-components=1 && chown -R kortix:kortix /workspace/.git
RUN git -C /workspace rev-parse HEAD >/dev/null 2>&1 && printf 'warm-repo: baked %s on %s\\n' "$(git -C /workspace rev-parse HEAD)" 'main'

COPY --chown=kortix:kortix kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup instance keep; rm -f /tmp/kortix-opencode-warmup

USER root
COPY kortix-agent.gz /tmp/kortix-agent.gz
COPY kortix.gz /tmp/kortix.gz
COPY kortix-entrypoint /usr/local/bin/kortix-entrypoint
COPY MACHINE.md /MACHINE.md
COPY kortix-slack-cli/ /opt/kortix/apps/sandbox/slack-cli/
COPY kortix-executor-sdk/ /opt/kortix/packages/executor-sdk/
COPY kortix-llm-catalog.json /opt/kortix/llm-catalog.json
COPY scaffold.git /opt/kortix/scaffold.git
RUN gunzip -c /tmp/kortix-agent.gz > /usr/local/bin/kortix-agent \\
    && gunzip -c /tmp/kortix.gz > /usr/local/bin/kortix \\
    && rm /tmp/kortix-agent.gz /tmp/kortix.gz \\
    && bash -n /usr/local/bin/kortix-entrypoint \\
    && chmod +x /usr/local/bin/kortix-agent /usr/local/bin/kortix /usr/local/bin/kortix-entrypoint \\
        /opt/kortix/apps/sandbox/slack-cli/install-shims.sh \\
    && bash /opt/kortix/apps/sandbox/slack-cli/install-shims.sh /opt/kortix/apps/sandbox/slack-cli \\
    && kortix --version \\
    && chown -R kortix:kortix /opt/kortix /workspace /ephemeral

ENV KORTIX_WORKSPACE=/workspace
USER kortix
WORKDIR /workspace
EXPOSE 8000
ENTRYPOINT ["/usr/local/bin/kortix-entrypoint"]
"
`;

exports[`buildPerProjectWarmFromBaseDockerfile (FROM-base fast path) golden 1`] = `
"FROM registry.daytona.internal/kortix-default-abc123:latest

# ─── Per-project COLD warm (FROM-base fast path, auto-injected) ─────
# Everything above this line is INHERITED from the already-built default
# runtime image (apt/pip/opencode/bun/agent-browser + Chromium are already
# baked in) — nothing below re-installs any of it. This is what makes the
# Chromium install a guaranteed inherit instead of an opportunistic
# build-cache hit. Do not add toolchain RUNs here — they belong in
# kortixToolchainLayer, which this stage deliberately skips.

USER kortix

# ─── Per-project COLD warm: bake repo checkout into /workspace ──────
# The repo was cloned with the git-host credential, origin-reset to the
# Kortix proxy, and scrubbed of ALL auth material API-side in Suna before
# this Dockerfile was rendered. This image only COPYs the sanitized plain
# bytes — no git credential ever enters the Dockerfile, build args, image
# history, or build logs. See PHASE 1 provider-migration hardening.
RUN cd / && mkdir -p /workspace && find /workspace -mindepth 1 -maxdepth 1 -exec rm -rf {} +
COPY --chown=kortix:kortix kortix-warm-repo/ /workspace/
COPY kortix-warm-repo-git.tar /tmp/kortix-warm-repo-git.tar
RUN rm -rf /workspace/.git && mkdir -p /workspace/.git && tar -xf /tmp/kortix-warm-repo-git.tar -C /workspace/.git --strip-components=1 && chown -R kortix:kortix /workspace/.git
RUN git -C /workspace rev-parse HEAD >/dev/null 2>&1 && printf 'warm-repo: baked %s on %s\\n' "$(git -C /workspace rev-parse HEAD)" 'main'

COPY --chown=kortix:kortix kortix-opencode-config/ /opt/kortix/warm-config/.kortix/opencode/
RUN cd /opt/kortix/warm-config/.kortix/opencode \\
    && rm -rf node_modules \\
    && ln -s /opt/kortix/opencode-config-deps/node_modules node_modules \\
    && bun build tools/*.ts --target=bun --outdir=/tmp/opencode-tools-bundle-check \\
    && rm -rf /tmp/opencode-tools-bundle-check \\
    && echo "opencode-config-deps: starter tool files bundle cleanly"

COPY --chown=kortix:kortix kortix-opencode-warmup /tmp/kortix-opencode-warmup
RUN bash /tmp/kortix-opencode-warmup instance keep; rm -f /tmp/kortix-opencode-warmup

"
`;
